cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/Vendor_Assessment__c.object-meta.xml
<CustomObject>
    <label>Vendor Assessment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>