cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Assessments</relationshipLabel>
    <relationshipName>Vendor_Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>