cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/fields/Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percentage__c</fullName>
    <formula>CASE(Stage__c ,&quot;New&quot;, 0,
                &quot;Started&quot;, 0.25,
                &quot;Halfway Done&quot;, 0.50,
                &quot;Almost Done&quot;, 0.75,
                &quot;Complete&quot;, 01.00,
01.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>