cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/fields/Fequency__c.field-meta.xml
<CustomField>
    <fullName>Fequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Event Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>