cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/fields/Link_to_Portal__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Portal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link to Portal</label>
    <type>Url</type>
</CustomField>