cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Corporate Services</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Streamlink</fullName>
            </value>
            <value>
                <fullName>Knovio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>