cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Halfway Done</fullName>
            </value>
            <value>
                <fullName>Almost Done</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>