cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/fields/Third_Party_Systems_Leveraged__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Systems_Leveraged__c</fullName>
    <label>Third Party Systems Leveraged</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Amazon Wed Services (AWS)</fullName>
            </value>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>Intent Solutions Group</fullName>
            </value>
            <value>
                <fullName>Simply</fullName>
            </value>
            <value>
                <fullName>Wavelabs</fullName>
            </value>
            <value>
                <fullName>M2 Marcas</fullName>
            </value>
            <value>
                <fullName>China Peace Intern.</fullName>
            </value>
            <value>
                <fullName>K2 Partnering Solutions KK</fullName>
            </value>
            <value>
                <fullName>Rev</fullName>
            </value>
            <value>
                <fullName>Sisense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>