cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>