cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/fields/Vendor_Assessment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Assessment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Assessment Complete?</label>
    <type>Checkbox</type>
</CustomField>