cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/recordTypes/New_Vendor_Assessment.recordType-meta.xml
<RecordType>
    <fullName>New_Vendor_Assessment</fullName>
    <active>true</active>
    <label>New Vendor Assessment</label>
</RecordType>