cititechdNew2024Jan/force-app/main/default/objects/Vendor_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Third_Party_Systems_Leveraged__c</columns>
    <columns>Fequency__c</columns>
    <columns>Difficulty__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>